fix bugs with entity damage by entity constructor